@@ -24,6 +24,7 @@ Contents:
     pages/customising/settings
     pages/customising/admin
     pages/customising/views
+    pages/customising/models
     pages/customising/contrib
     pages/contributing
     pages/changelog
